Fix dotnet.sh quotes

--- a/concourse-tasks/build-and-upload/task.yml
+++ b/concourse-tasks/build-and-upload/task.yml
@@ -12,13 +12,17 @@ params:
   ARTIFACTORY_REPO_ID:
   ARTIFACTORY_TOKEN:
   ARTIFACTORY_HOST:
-  APP_SRC_CSPROJ_PATH:
-  APP_UNIT_TEST_CSPROJ_PATH:
-  APP_INTEGRATION_TEST_CSPROJ_PATH:
-  APP_SMOKE_TEST_CSPROJ_PATH:
-  CF_MANIFEST_PATH:
-  ARTILLERY_MANIFEST_PATH:
+  SRC_CSPROJ_LOCATION_IN_SOLUTION:
+  UNIT_TEST_CSPROJ_LOCATION_IN_SOLUTION:
+  INTEGRATION_TEST_CSPROJ_LOCATION_IN_SOLUTION:
+  SMOKE_TEST_CSPROJ_LOCATION_IN_SOLUTION:
+  CF_MANIFEST_LOCATION_IN_SOLUTION:
+  ARTILLERY_MANIFEST_LOCATION_IN_SOLUTION:
   DOTNET_VERSION:
+  DOTNET_FRAMEWORK:
+  DOTNET_RUNTIME_ID:
+  DOTNET_PLATFORM:
+  DOTNET_TEST_LOGGER:
 
 inputs:
   - name: src-and-test
