--- a/concourse-tasks/load-test/task.yml
+++ b/concourse-tasks/load-test/task.yml
@@ -12,8 +12,8 @@ params:
   ARTIFACTORY_REPO_ID:
   ARTIFACTORY_TOKEN:
   ARTIFACTORY_HOST:
-  LOAD_TEST_APP_URL:
   ARTILLERY_ENVIRONMENT:
+  SRC_ARTIFACT_NAME:
 
 inputs:
   - name: task-scripts
