--- a/concourse-tasks/push-to-cf-prod/task.yml
+++ b/concourse-tasks/push-to-cf-prod/task.yml
@@ -9,15 +9,15 @@ image_resource:
     tag: 16.04 #latest
 
 params:
-  PAAS_PROD_ORG:
-  PAAS_PROD_PASSWORD:
-  PAAS_PROD_SPACE:
-  PAAS_PROD_USERNAME:
-  PAAS_PROD_API_URL:
-  PAAS_PROD_APP_NAME:
+  CF_PROD_ORG:
+  CF_PROD_PASSWORD:
+  CF_PROD_SPACE:
+  CF_PROD_USERNAME:
+  CF_PROD_API_URL:
   ARTIFACTORY_REPO_ID:
   ARTIFACTORY_TOKEN:
   ARTIFACTORY_HOST:
+  CF_CLI_VERSION:
 
 inputs:
   - name: task-scripts
