--- a/concourse-tasks/push-to-cf-stage/task.yml
+++ b/concourse-tasks/push-to-cf-stage/task.yml
@@ -9,15 +9,15 @@ image_resource:
     tag: 16.04 #latest
 
 params:
-  PAAS_STAGE_ORG:
-  PAAS_STAGE_PASSWORD:
-  PAAS_STAGE_SPACE:
-  PAAS_STAGE_USERNAME:
-  PAAS_STAGE_API_URL:
-  PAAS_STAGE_APP_NAME:
+  CF_STAGE_ORG:
+  CF_STAGE_PASSWORD:
+  CF_STAGE_SPACE:
+  CF_STAGE_USERNAME:
+  CF_STAGE_API_URL:
   ARTIFACTORY_REPO_ID:
   ARTIFACTORY_TOKEN:
   ARTIFACTORY_HOST:
+  CF_CLI_VERSION:
 
 inputs:
   - name: task-scripts
