--- a/concourse-tasks/scan-code-quality/task.yml
+++ b/concourse-tasks/scan-code-quality/task.yml
@@ -13,7 +13,12 @@ params:
   SONAR_PROJECT_NAME:
   SONAR_HOST:
   SONAR_LOGIN_KEY:
+  SONAR_SCANNER_VERSION:
+  SONAR_SCANNER_MSBUILD_VERSION:
+  SONAR_TIMEOUT_SECONDS:
   DOTNET_VERSION:
+  DOTNET_FRAMEWORK:
+  DOTNET_RUNTIME_ID:
 
 inputs:
   - name: src-and-test
