--- a/concourse-tasks/unit-test/task.yml
+++ b/concourse-tasks/unit-test/task.yml
@@ -12,7 +12,11 @@ params:
   ARTIFACTORY_REPO_ID:
   ARTIFACTORY_TOKEN:
   ARTIFACTORY_HOST:
-  APP_UNIT_TEST_DLL_NAME:
+  UNIT_TEST_DLL_NAME:
+  DOTNET_VERSION:
+  DOTNET_FRAMEWORK:
+  DOTNET_PLATFORM:
+  DOTNET_TEST_LOGGER:
   
 inputs:
   - name: task-scripts
