--- a/concourse-tasks/smoke-test/task.yml
+++ b/concourse-tasks/smoke-test/task.yml
@@ -12,8 +12,13 @@ params:
   ARTIFACTORY_REPO_ID:
   ARTIFACTORY_TOKEN:
   ARTIFACTORY_HOST:
-  APP_SMOKE_TEST_DLL_NAME:
-  
+  SMOKE_TEST_ARTIFACT_NAME:
+  SMOKE_TEST_DLL_NAME:
+  DOTNET_VERSION:
+  DOTNET_FRAMEWORK:
+  DOTNET_PLATFORM:
+  DOTNET_TEST_LOGGER:
+
 inputs:
   - name: task-scripts
   - name: concourse-tasks
