Testing folder structure

--- a/concourse-tasks/generate-version/task.yml
+++ b/concourse-tasks/generate-version/task.yml
@@ -10,8 +10,7 @@ image_resource:
 params:
 
 inputs:
-  - name: task-scripts
-  - name: concourse-tasks
+  - name: dotnet-pipelines
   - name: src-version
   - name: keyval
 
