--- a/concourse-tasks/integration-test/task.yml
+++ b/concourse-tasks/integration-test/task.yml
@@ -19,12 +19,11 @@ params:
   DOTNET_TEST_LOGGER:
   
 inputs:
-  - name: task-scripts
-  - name: concourse-tasks
+  - name: dotnet-pipelines
   - name: keyval
 
 outputs:
   - name: keyvalout
 
 run:
-  path: concourse-tasks/integration-test/task.sh
+  path: dotnet-pipelines/concourse-tasks/integration-test/task.sh
