--- a/concourse-tasks/load-test/task.yml
+++ b/concourse-tasks/load-test/task.yml
@@ -16,12 +16,11 @@ params:
   SRC_ARTIFACT_NAME:
 
 inputs:
-  - name: task-scripts
-  - name: concourse-tasks
+  - name: dotnet-pipelines
   - name: keyval
 
 outputs:
   - name: keyvalout
 
 run:
-  path: concourse-tasks/load-test/task.sh
+  path: dotnet-pipelines/concourse-tasks/load-test/task.sh
