--- a/concourse-tasks/scan-code-quality/task.yml
+++ b/concourse-tasks/scan-code-quality/task.yml
@@ -22,12 +22,11 @@ params:
 
 inputs:
   - name: src-and-test
-  - name: task-scripts
-  - name: concourse-tasks
+  - name: dotnet-pipelines
   - name: keyval
 
 outputs:
   - name: keyvalout
 
 run:
-  path: concourse-tasks/scan-code-quality/task.sh
+  path: dotnet-pipelines/concourse-tasks/scan-code-quality/task.sh
