--- a/concourse-tasks/concourse-params.yml
+++ b/concourse-tasks/concourse-params.yml
@@ -4,10 +4,8 @@ git-email: ""
 git-name: ""
 src-and-test-url: "" #The GIT address to the app solution repo
 src-and-test-branch: "" #Branch name that holds app source and test code
-task-scripts-url: "https://github.com/ddieruf/dotnet-pipelines.git"
-task-scripts-branch: 0.0.1 #Branch name that holds the task bash scripts
-concourse-tasks-url: "https://github.com/ddieruf/dotnet-pipelines.git"
-concourse-tasks-branch: 0.0.1 #Branch name that holds the concourse task definition
+dotnet-pipelines-url: "https://github.com/ddieruf/dotnet-pipelines.git"
+dotnet-pipelines-branch: 0.0.1 #Branch name that holds the task bash scripts
 github-private-key: ""
 
 ####################
@@ -27,31 +25,31 @@ sonar-msbuild-version: 4.0.2.892
 sonar-timeout-seconds: 240 #the time, in seconds, Sonar Qube should wait for a quality gate report
 
 #DOTNET CORE INFO
-dotnet-version: 2.0.3 #https://github.com/dotnet/core/releases
-dotnet-framework: "" #https://docs.microsoft.com/en-us/dotnet/standard/frameworks
-dotnet-runtime-id: "" #https://docs.microsoft.com/en-us/dotnet/core/rid-catalog
-dotnet-platform: "" #https://docs.microsoft.com/en-us/dotnet/core/rid-catalog
-dotnet-test-logger: "" #https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-vstest
+dotnet-version: 2.0.3 #Required https://github.com/dotnet/core/releases
+dotnet-framework: "" #Required https://docs.microsoft.com/en-us/dotnet/standard/frameworks
+dotnet-runtime-id:  #Leave bkank to not include the entire runtime in artifact https://docs.microsoft.com/en-us/dotnet/core/rid-catalog
+dotnet-platform: "" #Required https://docs.microsoft.com/en-us/dotnet/core/rid-catalog
+dotnet-test-logger:  #Leave blank to not use logger functions during tests https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-vstest
 
 #DOTNET SOLUTION INFO
-src-csproj-location-in-solution: "Src/My-Project/MyProject.csproj" #From the sln file, the location of the app source code project file
-unit-test-csproj-location-in-solution: "Test/My-Project.UnitTests/MyProject.UnitTests.csproj" #From the sln file, the location of the app unit test project file
-integration-test-location-in-solution: "Test/My-Project.IntegrationTests/MyProject.IntegrationTests.csproj" #From the sln file, the location of the app integration test project file
-smoke-test-csproj-location-in-solution: "Test/My-Project.SmokeTests/MyProject.SmokeTests.csproj" #From the sln file, the location of the app smoke test project file
-unit-test-dll-name: "MyProject.UnitTests.dll" #The dll name of the unit test project
-integration-test-dll-name: "MyProject.IntegrationTests.dll" #The dll name of the integration test project
-smoke-test-dll-name: "MyProject.SmokeTests.dll" #The dll name of the smoke test project
+src-csproj-location-in-solution: "" #From the sln file, the location of the app source code project file
+unit-test-csproj-location-in-solution: "" #From the sln file, the location of the app unit test project file
+integration-test-location-in-solution: "" #From the sln file, the location of the app integration test project file
+smoke-test-csproj-location-in-solution: "" #From the sln file, the location of the app smoke test project file
+unit-test-dll-name: "" #The dll name of the unit test project
+integration-test-dll-name: "" #The dll name of the integration test project
+smoke-test-dll-name: "" #The dll name of the smoke test project
 
 #CLOUD FOUNDRY INFO
 cf-cli-version: 6.34.1 #https://github.com/cloudfoundry/cli/releases
-cf-stage-manifest-location-in-solution: "Ci/cf-stage.yml" #From the sln file, the location of the staging cf manifest
+cf-stage-manifest-location-in-solution: "" #Required From the sln file, the location of the staging cf manifest
 cf-stage-api-url: "" #Cloud Foundry api URL for staging environment
 cf-stage-username: "" #Cloud Foundry username for staging environment
 cf-stage-password: "" #Cloud Foundry password for staging environment
 cf-stage-org: "" #Cloud Foundry staging org for the app
 cf-stage-space: "" #Cloud Foundry staging space for the app
 
-cf-prod-manifest-location-in-solution: "Ci/cf-prod.yml"
+cf-prod-manifest-location-in-solution: "" #Required From the sln file, the location of the prod cf manifest
 cf-prod-api-url: "" #Cloud Foundry api URL for production environment
 cf-prod-username: "" #Cloud Foundry username for production environment
 cf-prod-password: "" #Cloud Foundry password for production environment
