--- a/concourse-tasks/load-test/task.yml
+++ b/concourse-tasks/load-test/task.yml
@@ -5,10 +5,12 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: ubuntu #djudorange/node-gulp-mocha
-    tag: 16.04 #"latest"
+    repository: ubuntu
+    tag: 16.04
 
 params:
+  ARTIFACT_LOCATION_TYPE:
+  ARTIFACT_FOLDER_PATH:
   ARTIFACTORY_REPO_ID:
   ARTIFACTORY_TOKEN:
   ARTIFACTORY_HOST:
